TODO: fix on mobile, last image scrolls below footer

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -23,6 +23,7 @@ body {
     animation-fill-mode: forwards;
 
 	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #root {
